--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,6 +3,12 @@ svg, img {
   vertical-align: inherit !important;
 }
 
+/* resetting code rules that came from bootstrap */
+code {
+    color: inherit !important;
+    word-break: inherit !important;
+}
+
 @media only percy {
   .sidebar nav.toc-container {
     margin-top: 0 !important;
